This fixes the search icon from wrapping into horde-sub row

--- a/horde/themes/default/screen.css
+++ b/horde/themes/default/screen.css
@@ -1719,7 +1719,7 @@ left.horde-point-right {
 }
 #horde-search-icon {
     float: left;
-    margin: 7px 0 0 9px;
+    margin: 7px 0 0 7px;
 }
 #horde-logout {
     float: right;
